# inpigritas-2022

./: .gitignore  Dockerfile  README.md  ROADMAP.md  api.py  blockchain.py  chainspec.py  client.py  compile.sh  docker-compose.yaml  inpigritas.db  node.py  notes.txt  pyproject.toml  quickstart.sh  requirements.txt  run.py  test.py  transfer-impl-roadmap.txt  transfer.py
core/: accounts.py  blockchain.py  transfer.py
ictl/: README.md  debug.py  setup.sh  start.sh  tests.py
ictl/artifacts/cli_1/: chainspec.py
ictl/artifacts/cli_2/: chainspec.py
ictl/cli_1/: api.py  client.py  genesis.py  test.py
ictl/cli_1/core/: blockchain.py  transfer.py
ictl/cli_1/keys/: public_key.pem
ictl/cli_2/: api.py  chainspec.py  client.py  run.py  test.py
ictl/cli_2/core/: blockchain.py
src/: api.py  chainspec.py  client.py  config.py  genesis.py  inpigritas.db  launcher.py  main.py  node.py  run.py  service.py  submit-transaction-tests.py  test.py  tests.py
src/cli/: lib.py
src/core/: accounts.py  balance.py  block.py  blockchain.py  factory.py  transfer.py
src/keys/: private_key.pem
src/sync/: blk.py  lib.py  tx.py
src/synchronization/: blocks.py  sync.py  transactions.py
src/tx/: pool.py  transaction.py
tests/: submit-transaction-tests.py
