[tool.poetry]
name = "inpigritas-2022"
version = "0.1.0"
description = "A blockchain-inspired cryptographically secured transaction system"
authors = ["Jonas Pauli"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.64.1"
Flask = "^2.2.2"
argparse = "^1.4.0"
pycryptodome = "^3.17"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
